--- a/GpgKeyGen/GpgKeyGen/MainWindow.xaml
+++ b/GpgKeyGen/GpgKeyGen/MainWindow.xaml
@@ -4,8 +4,22 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
+        xmlns:validators ="clr-namespace:GpgKeyGen.Validators"
         Title="Generator kluczy" SizeToContent="WidthAndHeight" MinHeight="300" MinWidth="400">
+    <Window.Resources>
+        <validators:FieldRequired x:Key="FieldRequired"/>
+        <validators:EmailCorrect x:Key="EmailCorrect"/>
+        <Style TargetType="TextBox">
+            <Style.Triggers>
+                <Trigger Property="Validation.HasError" Value="true">
+                    <Setter Property="ToolTip" Value="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors).CurrentItem.ErrorContent}" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
+    
     <Grid>
+
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition />
@@ -18,17 +32,41 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <TextBox  x:Name="Username" Grid.Row="0" Grid.Column="1" TextWrapping="Wrap" Text="" Margin="5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
-        <TextBox x:Name="Email" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="1" Grid.Column="1"  TextWrapping="Wrap" Text="" Margin="5"/>
-        <PasswordBox x:Name="KeyPwd" Margin="5" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-        <TextBox x:Name="Comment" Margin="5" Grid.Row="2" Grid.Column="1"  TextWrapping="Wrap" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
-        <Button Content="Generuj klucze"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="5" Grid.Column="1" Click="Button_Click" Margin="10"/>
+        <TextBox  x:Name="Username" Grid.Row="0" Grid.Column="1" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Binding Path="Username" UpdateSourceTrigger="PropertyChanged" ValidatesOnExceptions="True" ValidatesOnDataErrors="True" ValidatesOnNotifyDataErrors="True">
+                <Binding.ValidationRules>
+                    <validators:FieldRequired/>
+                </Binding.ValidationRules>
+            </Binding>
+        </TextBox>
+        <TextBox x:Name="Email" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="1" Grid.Column="1"  TextWrapping="Wrap" Margin="5">
+            <Binding Path="Email" UpdateSourceTrigger="PropertyChanged" ValidatesOnExceptions="True" ValidatesOnDataErrors="True" ValidatesOnNotifyDataErrors="True">
+                <Binding.ValidationRules>
+                    <validators:EmailCorrect/>
+                </Binding.ValidationRules>
+            </Binding>
+        </TextBox>
+        <PasswordBox x:Name="KeyPwd" Margin="5" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
+            <Binding Path="Password" UpdateSourceTrigger="PropertyChanged" ValidatesOnExceptions="True" ValidatesOnDataErrors="True" ValidatesOnNotifyDataErrors="True">
+                <Binding.ValidationRules>
+                    <validators:FieldRequired/>
+                </Binding.ValidationRules>
+            </Binding>
+        </PasswordBox>
+        <TextBox x:Name="Comment" Margin="5" Grid.Row="2" Grid.Column="1"  TextWrapping="Wrap" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Binding Path="Comment" UpdateSourceTrigger="PropertyChanged" ValidatesOnExceptions="True" ValidatesOnDataErrors="True" ValidatesOnNotifyDataErrors="True">
+                <Binding.ValidationRules>
+                    <validators:FieldRequired/>
+                </Binding.ValidationRules>
+            </Binding>
+        </TextBox>
+        <Button Content="Generuj klucze"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="5" Grid.Column="1" Click="Generate" Margin="10"/>
         <TextBlock HorizontalAlignment="Right" Margin="5" Grid.Row="0" Grid.Column="0" TextWrapping="Wrap" Text="Imię i nazwisko: " TextAlignment="Center"/>
         <TextBlock HorizontalAlignment="Right" Margin="5" Grid.Row="1" Grid.Column="0" TextWrapping="Wrap" Text="Adres e-mail:" TextAlignment="Center"/>
         <TextBlock HorizontalAlignment="Right" Margin="5" Grid.Row="2" Grid.Column="0" TextWrapping="Wrap" Text="Komentarz:" TextAlignment="Center"/>
         <TextBlock HorizontalAlignment="Right" Margin="5" Grid.Row="3" Grid.Column="0" TextWrapping="Wrap" Text="hasło klucza:" TextAlignment="Center"/>
         <CheckBox x:Name="ForCommission" Content="Tylko na 1 dzień (komisja)" Grid.Row="4" Grid.Column="0"  HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2" />
-        <Button Content="Ustawienia"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="5" Grid.Column="0" Margin="10" Click="Button_Click_1"/>
+        <Button Content="Ustawienia"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="5" Grid.Column="0" Margin="10" Click="ChangeSettings"/>
 
 
     </Grid>
