Add email settings as ext settings

--- a/GpgKeyGen/GpgKeyGen/MainWindow.xaml
+++ b/GpgKeyGen/GpgKeyGen/MainWindow.xaml
@@ -46,13 +46,7 @@
                 </Binding.ValidationRules>
             </Binding>
         </TextBox>
-        <PasswordBox x:Name="KeyPwd" Margin="5" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
-            <Binding Path="Password" UpdateSourceTrigger="PropertyChanged" ValidatesOnExceptions="True" ValidatesOnDataErrors="True" ValidatesOnNotifyDataErrors="True">
-                <Binding.ValidationRules>
-                    <validators:FieldRequired/>
-                </Binding.ValidationRules>
-            </Binding>
-        </PasswordBox>
+        <PasswordBox x:Name="KeyPwd" Margin="5" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" PasswordChanged="PasswordChanged"/> 
         <TextBox x:Name="Comment" Margin="5" Grid.Row="2" Grid.Column="1"  TextWrapping="Wrap" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <Binding Path="Comment" UpdateSourceTrigger="PropertyChanged" ValidatesOnExceptions="True" ValidatesOnDataErrors="True" ValidatesOnNotifyDataErrors="True">
                 <Binding.ValidationRules>
@@ -65,7 +59,7 @@
         <TextBlock HorizontalAlignment="Right" Margin="5" Grid.Row="1" Grid.Column="0" TextWrapping="Wrap" Text="Adres e-mail:" TextAlignment="Center"/>
         <TextBlock HorizontalAlignment="Right" Margin="5" Grid.Row="2" Grid.Column="0" TextWrapping="Wrap" Text="Komentarz:" TextAlignment="Center"/>
         <TextBlock HorizontalAlignment="Right" Margin="5" Grid.Row="3" Grid.Column="0" TextWrapping="Wrap" Text="hasło klucza:" TextAlignment="Center"/>
-        <CheckBox x:Name="ForCommission" Content="Tylko na 1 dzień (komisja)" Grid.Row="4" Grid.Column="0"  HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2" />
+        <CheckBox x:Name="ForCommission" Content="Tylko na 1 dzień (komisja)" Grid.Row="4" Grid.Column="0"  HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2" IsChecked="{Binding Path=ForCommission}" />
         <Button Content="Ustawienia"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="5" Grid.Column="0" Margin="10" Click="ChangeSettings"/>
 
 
