--- a/GpgKeyGen/GpgKeyGen/MainWindow.xaml
+++ b/GpgKeyGen/GpgKeyGen/MainWindow.xaml
@@ -26,7 +26,7 @@
             <RowDefinition />
             <RowDefinition />
             <RowDefinition />
-            <RowDefinition Height="5*" />
+            <RowDefinition Height="2*" />
             <RowDefinition />
 
         </Grid.RowDefinitions>
@@ -56,16 +56,16 @@
                 </Binding.ValidationRules>
             </Binding>
         </TextBox>
-        <Button Content="Generuj klucze"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="6" Grid.Column="1" Command="{Binding GenerateCommand}"  Margin="10"/>
+        <Button Content="Generuj klucze"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="6" Grid.Column="1" Command="{Binding GenerateCommand}"  Margin="5"/>
         <TextBlock HorizontalAlignment="Right" Margin="5" Grid.Row="0" Grid.Column="0" TextWrapping="Wrap" Text="Imię i nazwisko: " TextAlignment="Center"/>
         <TextBlock HorizontalAlignment="Right" Margin="5" Grid.Row="1" Grid.Column="0" TextWrapping="Wrap" Text="Adres e-mail:" TextAlignment="Center"/>
         <TextBlock HorizontalAlignment="Right" Margin="5" Grid.Row="2" Grid.Column="0" TextWrapping="Wrap" Text="Komentarz:" TextAlignment="Center"/>
         <TextBlock HorizontalAlignment="Right" Margin="5" Grid.Row="3" Grid.Column="0" TextWrapping="Wrap" Text="hasło klucza:" TextAlignment="Center"/>
-        <CheckBox x:Name="ForCommission" Content="Tylko na 1 dzień (komisja)" Grid.Row="4" Grid.Column="0"  HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2" IsChecked="{Binding Path=ForCommission}" />
+        <CheckBox x:Name="ForCommission" Content="Tylko na 1 dzień (komisja)" Grid.Row="4" Grid.Column="0"  HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2" IsChecked="{Binding Path=OneDay}" />
         <ScrollViewer Margin="5" Grid.Row="5"  Grid.ColumnSpan="2">
-            <TextBlock HorizontalAlignment="Stretch" VerticalAlignment="Stretch" TextWrapping="Wrap" Text="{Binding CmdOutputString}" TextAlignment="Center"/>
+            <TextBlock TextAlignment="Left" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" TextWrapping="Wrap" Text="{Binding CmdOutputString}"/>
         </ScrollViewer>
-        <Button Content="Ustawienia"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="6" Grid.Column="0" Margin="10" Click="ChangeSettings"/>
+        <Button Content="Ustawienia"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="6" Grid.Column="0" Margin="5" Click="ChangeSettings"/>
 
 
     </Grid>
