--- a/GpgKeyGen/GpgKeyGen/App.xaml
+++ b/GpgKeyGen/GpgKeyGen/App.xaml
@@ -4,6 +4,12 @@
              xmlns:local="clr-namespace:GpgKeyGen"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style TargetType="TextBox">
+            <Style.Triggers>
+                <Trigger Property="Validation.HasError" Value="true">
+                    <Setter Property="ToolTip" Value="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors).CurrentItem.ErrorContent}" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
     </Application.Resources>
 </Application>
