--- a/GpgKeyGen/GpgKeyGen/MainWindow.xaml
+++ b/GpgKeyGen/GpgKeyGen/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         xmlns:validators ="clr-namespace:GpgKeyGen.Validators"
-        Title="Generator kluczy" SizeToContent="WidthAndHeight" MinHeight="300" MinWidth="400">
+        Title="Generator kluczy" SizeToContent="WidthAndHeight" MinHeight="300" MinWidth="400" ResizeMode="CanMinimize">
     <Grid>
 
         <Grid.RowDefinitions>
