--- a/GpgKeyGen/GpgKeyGen/UserSettingsWindow.xaml
+++ b/GpgKeyGen/GpgKeyGen/UserSettingsWindow.xaml
@@ -12,6 +12,7 @@
             <RowDefinition />
             <RowDefinition />
             <RowDefinition />
+            <RowDefinition />
 
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -20,6 +21,7 @@
         </Grid.ColumnDefinitions>
         <TextBlock Text="Adres serwera kluczy" Grid.Row="0" Grid.Column="0" TextAlignment="Right" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="5"/>
         <TextBlock Text="Ścieżka dostępu do plików kluczy" Grid.Row="1" Grid.Column="0" TextAlignment="Right" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="5"/>
+        <TextBlock Text="Ścieżka dostępu do dokumentów" Grid.Row="2" Grid.Column="0" TextAlignment="Right" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="5"/>
         <TextBox Grid.Row="0" Grid.Column="1" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Stretch" VerticalAlignment="Center">
             <Binding Path="Address" UpdateSourceTrigger="LostFocus" ValidatesOnExceptions="True" ValidatesOnDataErrors="True" ValidatesOnNotifyDataErrors="True">
                 <Binding.ValidationRules>
@@ -35,7 +37,15 @@
                 <TextBlock TextWrapping="Wrap" Grid.Column="0" Margin="5" HorizontalAlignment="Stretch" VerticalAlignment="Center" TextAlignment="Center" Text="{Binding Path}"></TextBlock>
             <Button Margin="5" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Content="..." Click="GetPath"></Button>
             </Grid>
-        <Button Margin="10" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Content="OK" Command="{Binding SaveCommand}"></Button>
+        <Grid Grid.Row="2" Grid.Column="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="5*"/>
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <TextBlock TextWrapping="Wrap" Grid.Column="0" Margin="5" HorizontalAlignment="Stretch" VerticalAlignment="Center" TextAlignment="Center" Text="{Binding DocumentPath}"></TextBlock>
+            <Button Margin="5" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Content="..." Click="GetDocumentPath"></Button>
+        </Grid>
+        <Button Margin="10" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Content="OK" Command="{Binding SaveCommand}"></Button>
         </Grid>
 
 </Window>
