--- a/GpgKeyGen/GpgKeyGen/UserSettingsWindow.xaml
+++ b/GpgKeyGen/GpgKeyGen/UserSettingsWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:validators ="clr-namespace:GpgKeyGen.Validators"
         xmlns:local="clr-namespace:GpgKeyGen"
         mc:Ignorable="d"
-        Title="Ustawienia programu" Height="184" Width="558" ResizeMode="CanMinimize" Icon="Icons/key.png">
+        Title="Ustawienia programu" Height="224" Width="526" ResizeMode="CanMinimize" Icon="Icons/key.png">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition />
@@ -31,12 +31,12 @@
         </TextBox>
         <Grid Grid.Row="1" Grid.Column="1">
             <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="5*"/>
-                    <ColumnDefinition />
-                </Grid.ColumnDefinitions>
-                <TextBlock TextWrapping="Wrap" Grid.Column="0" Margin="5" HorizontalAlignment="Stretch" VerticalAlignment="Center" TextAlignment="Center" Text="{Binding Path}"></TextBlock>
+                <ColumnDefinition Width="5*"/>
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <TextBlock TextWrapping="Wrap" Grid.Column="0" Margin="5" HorizontalAlignment="Stretch" VerticalAlignment="Center" TextAlignment="Center" Text="{Binding Path}"></TextBlock>
             <Button Margin="5" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Content="..." Click="GetPath"></Button>
-            </Grid>
+        </Grid>
         <Grid Grid.Row="2" Grid.Column="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="5*"/>
@@ -45,7 +45,7 @@
             <TextBlock TextWrapping="Wrap" Grid.Column="0" Margin="5" HorizontalAlignment="Stretch" VerticalAlignment="Center" TextAlignment="Center" Text="{Binding DocumentPath}"></TextBlock>
             <Button Margin="5" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Content="..." Click="GetDocumentPath"></Button>
         </Grid>
-        <Button Margin="10" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Content="OK" Command="{Binding SaveCommand}"></Button>
-        </Grid>
+        <Button Margin="10" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Content="OK" Padding="5" Command="{Binding SaveCommand}"></Button>
+    </Grid>
 
 </Window>
