--- a/GpgKeyGen/GpgKeyGen/UserSettingsWindow.xaml
+++ b/GpgKeyGen/GpgKeyGen/UserSettingsWindow.xaml
@@ -1,14 +1,14 @@
-﻿<Window xmlns:Controls="clr-namespace:Gat.Controls;assembly=Gat.Controls.OpenDialog"  x:Class="GpgKeyGen.UserSettingsWindow"
+﻿<Window  x:Class="GpgKeyGen.UserSettingsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:validators ="clr-namespace:GpgKeyGen.Validators"
-        xmlns:local="clr-namespace:GpgKeyGen"
         mc:Ignorable="d"
-        Title="Ustawienia programu" Height="224" Width="526" ResizeMode="CanMinimize" Icon="Icons/key.png">
+        Title="Ustawienia programu" Height="278.291" Width="600.801" ResizeMode="CanMinimize" Icon="Icons/key.png">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition />
             <RowDefinition />
             <RowDefinition />
             <RowDefinition />
@@ -22,6 +22,7 @@
         <TextBlock Text="Adres serwera kluczy" Grid.Row="0" Grid.Column="0" TextAlignment="Right" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="5"/>
         <TextBlock Text="Ścieżka dostępu do plików kluczy" Grid.Row="1" Grid.Column="0" TextAlignment="Right" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="5"/>
         <TextBlock Text="Ścieżka dostępu do dokumentów" Grid.Row="2" Grid.Column="0" TextAlignment="Right" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="5"/>
+        <TextBlock Text="Ilość dni do wygaśnięcia klucza komisji" Grid.Row="3" Grid.Column="0" TextAlignment="Right" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="5"/>
         <TextBox Grid.Row="0" Grid.Column="1" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Stretch" VerticalAlignment="Center">
             <Binding Path="Address" UpdateSourceTrigger="LostFocus" ValidatesOnExceptions="True" ValidatesOnDataErrors="True" ValidatesOnNotifyDataErrors="True">
                 <Binding.ValidationRules>
@@ -45,7 +46,9 @@
             <TextBlock TextWrapping="Wrap" Grid.Column="0" Margin="5" HorizontalAlignment="Stretch" VerticalAlignment="Center" TextAlignment="Center" Text="{Binding DocumentPath}"></TextBlock>
             <Button Margin="5" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Content="..." Click="GetDocumentPath"></Button>
         </Grid>
-        <Button Margin="10" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Content="OK" Padding="5" Command="{Binding SaveCommand}"></Button>
+        <TextBox PreviewTextInput="UIElement_OnPreviewTextInput" Text="{Binding ExpAfterDays}" Grid.Column="1" Grid.Row="3" Margin="5" HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
+        <Button Margin="10" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Content="OK" Padding="5" Command="{Binding SaveCommand}"></Button>
+        <TextBlock Grid.Row="4" Margin="0,0,0,5" HorizontalAlignment="Right" VerticalAlignment="Top">  (0 jeśli ma nie wygasać. Domyślnie 1.)</TextBlock>
     </Grid>
 
 </Window>
