--- a/GpgKeyGen/GpgKeyGen/MainWindow.xaml
+++ b/GpgKeyGen/GpgKeyGen/MainWindow.xaml
@@ -49,7 +49,7 @@
         <TextBlock HorizontalAlignment="Right" Margin="5" Grid.Row="1" Grid.Column="0" TextWrapping="Wrap" Text="Adres e-mail:" TextAlignment="Center"/>
         <TextBlock HorizontalAlignment="Right" Margin="5" Grid.Row="2" Grid.Column="0" TextWrapping="Wrap" Text="Komentarz:" TextAlignment="Center"/>
         <TextBlock HorizontalAlignment="Right" Margin="5" Grid.Row="3" Grid.Column="0" TextWrapping="Wrap" Text="hasło klucza:" TextAlignment="Center"/>
-        <CheckBox x:Name="ForCommission" Content="Tylko na 1 dzień (komisja)" Grid.Row="4" Grid.Column="0"  HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2" IsChecked="{Binding Path=OneDay}" />
+        <CheckBox x:Name="ForCommission" Content="Ograniczony czasowo (komisja)" Grid.Row="4" Grid.Column="0"  HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2" IsChecked="{Binding Path=Limited}" />
         <ScrollViewer Margin="5" Grid.Row="5"  Grid.ColumnSpan="2">
             <TextBlock TextAlignment="Left" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" TextWrapping="Wrap" Text="{Binding CmdOutputString}"/>
         </ScrollViewer>
